--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="red">#CD6155</color>
     <color name="light_gray_Accent">#D5DBDB</color>
     <color name="gray">#CACFD2</color>
+    <color name="white">#ffffff</color>
 
 </resources>
