--- a/app/src/main/res/layout/content_filter_results.xml
+++ b/app/src/main/res/layout/content_filter_results.xml
@@ -11,7 +11,8 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="de.tum.pom16.teamtba.reservationapp.activities.FilterResultsActivity"
     tools:showIn="@layout/activity_filter_results"
-    >
+    android:scrollbars="none">
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
