--- a/app/src/main/res/layout/content_search_results.xml
+++ b/app/src/main/res/layout/content_search_results.xml
@@ -9,20 +9,10 @@
     tools:context="de.tum.pom16.teamtba.reservationapp.activities.SearchResultsActivity"
     tools:showIn="@layout/activity_search_results">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_alignParentTop="true"
+    <FrameLayout
+        android:id="@+id/searchResults_frame_container"
         android:layout_width="match_parent"
-        android:layout_height="200dp" >
+        android:layout_height="match_parent">
 
-    </fragment>
-
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:id="@+id/searchResults_listview"
-        android:layout_below="@id/map" />
+    </FrameLayout>
 </RelativeLayout>
