Add listview to fragment (next - add the map too)

--- a/app/src/main/res/layout/content_map_listview_search_results.xml
+++ b/app/src/main/res/layout/content_map_listview_search_results.xml
@@ -13,17 +13,17 @@
 
     <!--</fragment>-->
 
-    <!--<ListView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="5dp"-->
-        <!--android:id="@+id/searchResults_listview"-->
-        <!--android:layout_below="@id/map" />-->
-
-    <TextView
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Yessss"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:id="@+id/searchResults_listview" />
+    <!--android:layout_below="@id/map"-->
+
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:gravity="center"-->
+        <!--android:text="Yessss"/>-->
 
 </RelativeLayout>
