--- a/app/src/main/res/layout/content_no_search_results.xml
+++ b/app/src/main/res/layout/content_no_search_results.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Sorry, no results found. Please refine your search!"/>
 
 </RelativeLayout>
