--- a/app/src/main/res/layout/content_map_listview_search_results.xml
+++ b/app/src/main/res/layout/content_map_listview_search_results.xml
@@ -3,22 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--xmlns:map="http://schemas.android.com/apk/res-auto"-->
-        <!--android:id="@+id/map"-->
-        <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="200dp" >-->
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" >
 
-    <!--</fragment>-->
+    </fragment>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:id="@+id/searchResults_listview" />
-    <!--android:layout_below="@id/map"-->
+        android:id="@+id/searchResults_listview"
+        android:layout_below="@id/map"/>
 
     <!--<TextView-->
         <!--android:layout_width="match_parent"-->
